--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  height: 60px;
+  background-color: #181818;
+  height: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
